restasy-385
git-svn-id: file:///Users/billburke/jboss/resteasy/resteasy-git/svn-server-sync/resteasy/trunk/jaxrs@1044 2b1ed4c4-5db3-0410-90e4-80a7a6204c25